--- a/build.gradle
+++ b/build.gradle
@@ -1,55 +1,37 @@
-description = 'A ConcordionRunner fused with SpringJUnit4ClassRunner '
+plugins {
+    id 'java'
+    id 'jacoco'
+    id 'ru.vyarus.java-lib' version '1.0.5'
+    id 'com.github.kt3k.coveralls' version '2.8.2'
+    id 'com.jfrog.bintray' version '1.8.0'
+    id 'net.researchgate.release' version '2.7.0'
+}
 
+description = 'A ConcordionRunner fused with SpringJUnit4ClassRunner'
 group 'org.chiknrice'
-
-apply plugin: 'java'
-apply plugin: 'maven-publish'
-apply plugin: 'jacoco'
-apply plugin: 'com.github.kt3k.coveralls'
-
-sourceCompatibility = 1.7
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
+ext {
+    concordionVersion = '2.1.2'
+    springVersion = '5.0.5.RELEASE'
+    slf4jVersion = '1.7.25'
+}
+
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.10', 'org.concordion:concordion:1.5.1'
-    compile 'org.springframework:spring-context:4.1.7.RELEASE'
-    compile 'org.springframework:spring-test:4.1.7.RELEASE'
-    testCompile 'junit:junit:4.11'
-    testRuntime 'org.slf4j:slf4j-simple:1.7.10'
+    provided "org.concordion:concordion:${concordionVersion}"
+    provided "org.springframework:spring-context:${springVersion}"
+    provided "org.springframework:spring-test:${springVersion}"
+    provided "org.slf4j:slf4j-simple:${slf4jVersion}"
 }
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from 'build/docs/javadoc'
-}
-
-buildscript {
-    repositories {
-        mavenCentral()
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1'
-        classpath 'net.researchgate:gradle-release:2.2.1'
-        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
-    }
-}
-
-apply plugin: 'com.jfrog.bintray'
-apply plugin: 'net.researchgate.release'
 
 bintray {
     user = System.getenv('BINTRAY_USER')
     key = System.getenv('BINTRAY_API_KEY')
-    publications = ['Release']
+    publications = ['maven']
     pkg {
         repo = 'maven'
         name = 'concordion-spring-runner'
@@ -58,8 +40,9 @@ bintray {
     }
 }
 
-def pomConfig = {
+pom {
     name project.name
+    description project.description
     url "https://github.com/chiknrice/${project.name}"
     scm {
         url "https://github.com/chiknrice/concordion-spring-runner"
@@ -79,21 +62,6 @@ def pomConfig = {
             name 'Ian Bondoc'
             email 'chiknrice@gmail.com'
             url 'https://github.com/chiknrice'
-        }
-    }
-}
-
-publishing {
-    publications {
-        Release(MavenPublication) {
-            from components.java
-
-            artifact sourcesJar
-            artifact javadocJar
-
-            pom.withXml {
-                asNode().appendNode("description", project.description).plus(pomConfig)
-            }
         }
     }
 }
